fix overflow

--- a/index-page/index-style.css
+++ b/index-page/index-style.css
@@ -1,3 +1,7 @@
+main {
+	margin-bottom: 5rem;
+}
+
 .card {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
