--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
   margin-left: 1rem;
   margin-right: 1rem;
 
+  overflow: auto;
+
   width: 70rem;
   position: relative;
   min-height: 100vh;
